# bevy-deep-dive

./: .editorconfig  Cargo.toml
assets/: player-base.aseprite  player-base.aseprite.json
src/: main.rs
