[package]
name = "bevy-deep-dive"
version = "0.1.0"
edition = "2021"
resolver = "2" # Important! wgpu/Bevy needs this!

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.6.1", features = ["dynamic"] }
bevy_spicy_aseprite = { git = "https://github.com/mdenchev/bevy_spicy_aseprite" }
